# spotlight-poseforge-paper

./: .gitignore  README.md  index.html  pyproject.toml  styles.css  videos.html
scripts/fig3_vid6_kinematics/: detect_walking_periods.py  make_figures_and_videos.py  replay_walking.py
scripts/fig3_vid7_kinematics/: make_figures_and_videos.py  make_figures_and_videos_n488.py  optimize_bac.py  optimize_tpe100.py  plot_sensitivity_analysis.py  replay_walking.py  replay_walking_n488.py  run_sensitivity_analysis.py
scripts/fig4_vid8_muscle/: analyze_all_stimulations.py  batch_make_videos.sh  exp_summary.py  figure_config.py  make_muscle_activity_video.py
scripts/kinematics/: extract_kinematics.py  gait_diagram.ipynb  make_figures_and_videos.py  make_video.ipynb  optimize_phys_params.py  replay.ipynb  replay_walking.py  visualize_params_optim.ipynb
scripts/suppfig2_pose_model_architecture/: plot_weights.py
scripts/suppfig3_leg_segment_lengths/: make_plot.py
scripts/vid1_spotlight_sample/: make_sample_video_smoothcrop.py  make_sample_video_smoothcrop_messy.py  process_sample_video.py
scripts/vid3_synthetic_data/: make_video.py
scripts/vid4_vid5_pose_estimation/: make_video.py
scripts/vid4_vid5_suppfig3_pose_estimation/: _bac_run_poseforge_prod_inference_pipeline.py  run_poseforge_prod_inference_pipeline.py
src/sppaper/common/: filter.py  io.py  muscle.py  plot.py  resources.py
src/sppaper/kinematics/: data.py  nmf_sim.py  optim.py  optim_pseudocode.py  shared_constants.py  trajectory.py  visualize.py
src/wc26/common/: filter.py  io.py
src/wc26/kinematics/: config.py  naming_convention.py  nmf_replay.py  shared_constants.py
